# neworkxiansu

./: .gitignore  CMakeLists.txt  NetSpeedCtrl.cer  README.md  build_gcc.bat  build_msvc.bat
.github/workflows/: build.yml
WinDivert/x86/: WinDivert32.sys  WinDivert64.sys
include/: NetSpeedCtrl.h
src/: NetSpeedCtrl.manifest  main.c  network.c  resource.rc  utils.c
